feat(dedicated.server): get random mount point for partition
ref: MANAGER-10226

Signed-off-by: sachinrameshn <sachin.ramesh@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/dedicated/server/installation/ovh/dedicated-server-installation-ovh.html
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/installation/ovh/dedicated-server-installation-ovh.html
@@ -576,7 +576,6 @@
                     <table class="table table-hover">
                         <thead>
                             <tr>
-                                <th></th>
                                 <th
                                     data-ng-if="!informations.softRaidOnlyMirroring"
                                 >
@@ -603,7 +602,7 @@
                                     data-translate="server_configuration_installation_ovh_step2_volume_name"
                                 ></th>
                                 <th
-                                    data-ng-show="installation.nbDiskUse > 1 && !informations.raidController && !informations.softRaidOnlyMirroring"
+                                    data-ng-show="installation.nbDiskUse > 1 && !informations.raidController"
                                 >
                                     <span
                                         data-translate="server_configuration_installation_ovh_step2_raid"
@@ -615,6 +614,10 @@
                                     >
                                     </span>
                                 </th>
+                                <th
+                                    scope="col"
+                                    data-ng-if="informations.softRaidOnlyMirroring"
+                                ></th>
                                 <th>
                                     <span
                                         data-translate="server_configuration_installation_ovh_step2_available_size"
@@ -644,7 +647,7 @@
                         </thead>
                         <tbody>
                             <tr
-                                data-ng-repeat="partition in installation.partitionSchemeModels | orderBy:'orderTable'"
+                                data-ng-repeat="partition in installation.partitionSchemeModels | orderBy:'orderTable' track by $index"
                                 data-ng-class="{
                                     'deleting': partition == installation.partitionSchemeModels[setPartition.delModel]
                                 }"
@@ -766,7 +769,7 @@
                                 </td>
                                 <td
                                     class="form-group"
-                                    data-ng-show="installation.nbDiskUse > 1 && !informations.raidController && !informations.softRaidOnlyMirroring"
+                                    data-ng-show="installation.nbDiskUse > 1 && !informations.raidController"
                                     data-ng-class="{
                                         'has-error': isSetPartition(partition) && hasErrorRaid()
                                     }"
@@ -783,12 +786,17 @@
                                     </span>
                                     <select
                                         class="form-control"
-                                        data-ng-if="isSetPartition(partition) && partition.fileSystem != constants.warningSwap"
+                                        data-ng-if="isSetPartition(partition) && partition.fileSystem != constants.warningSwap && !informations.softRaidOnlyMirroring"
                                         data-ng-options="raid as raid.replace('_', '') for raid in getRaidList(installation.nbDiskUse)"
                                         data-ng-model="partition.raid"
                                         data-ng-change="validationRaid(partition)"
                                     >
                                     </select>
+                                    <span
+                                        data-ng-if="isSetPartition(partition) && partition.fileSystem != constants.warningSwap && informations.softRaidOnlyMirroring"
+                                        data-ng-bind="partition.raid.replace('_', '')"
+                                    >
+                                    </span>
                                     <span
                                         class="oui-icon oui-icon-warning-circle"
                                         aria-label="{{ 'server_configuration_installation_ovh_step2_error_raid_diskUse_icon' | translate }}"
@@ -805,6 +813,16 @@
                                         data-oui-tooltip-placement="top"
                                     >
                                     </span>
+                                </td>
+                                <td
+                                    data-ng-if="informations.softRaidOnlyMirroring"
+                                >
+                                    <span
+                                        class="fa fa-windows"
+                                        data-ng-if="$index === 0"
+                                    >
+                                    </span>
+                                    <span data-ng-if="$index !===0"> </span>
                                 </td>
                                 <td
                                     class="form-group"
@@ -977,7 +995,7 @@
                                 >
                                     <span
                                         data-ng-if="constants.fileSystemList.length === 1 && informations.softRaidOnlyMirroring"
-                                        data-ng-model="newPartition.fileSystem"
+                                        data-ng-bind="newPartition.fileSystem"
                                     >
                                     </span>
                                     <select
@@ -1028,19 +1046,29 @@
                                 </td>
                                 <td
                                     class="form-group"
-                                    data-ng-show="installation.nbDiskUse > 1 && !informations.raidController && !informations.softRaidOnlyMirroring"
+                                    data-ng-show="installation.nbDiskUse > 1 && !informations.raidController"
                                     data-ng-class="{
                                         'has-error': hasErrorRaid()
                                     }"
                                 >
                                     <select
                                         class="form-control"
+                                        data-ng-if="!informations.softRaidOnlyMirroring"
                                         data-ng-options="raid as raid.replace('_','') for raid in getRaidList(installation.nbDiskUse)"
                                         data-ng-model="newPartition.raid"
                                         data-ng-change="validationRaid(newPartition)"
                                     >
                                     </select>
+                                    <span
+                                        data-ng-if="informations.softRaidOnlyMirroring"
+                                        data-ng-bind="newPartition.raid.replace('_', '')"
+                                    >
+                                    </span>
                                 </td>
+                                <td
+                                    data-ng-if="informations.softRaidOnlyMirroring"
+                                ></td>
+
                                 <td
                                     class="form-group"
                                     data-ng-class="{
@@ -1416,6 +1444,7 @@
                                     >
                                     </span>
                                 </th>
+
                                 <th scope="col">
                                     <span
                                         data-translate="server_configuration_installation_ovh_step2_available_size"
