--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/query-statistics/query-statistics.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/query-statistics/query-statistics.html
@@ -45,31 +45,41 @@
             data-property="minTime"
             data-type="number"
             data-sortable
-        ></oui-datagrid-column>
+        >
+            <span data-ng-bind="$value  | number : 2"></span>
+        </oui-datagrid-column>
         <oui-datagrid-column
             data-title=":: 'pci_databases_query_statistics_datagrid_max' | translate"
             data-property="maxTime"
             data-type="number"
             data-sortable
-        ></oui-datagrid-column>
+        >
+            <span data-ng-bind="$value  | number : 2"></span>
+        </oui-datagrid-column>
         <oui-datagrid-column
             data-title=":: 'pci_databases_query_statistics_datagrid_mean' | translate"
             data-property="meanTime"
             data-type="number"
             data-sortable
-        ></oui-datagrid-column>
+        >
+            <span data-ng-bind="$value  | number : 2"></span>
+        </oui-datagrid-column>
         <oui-datagrid-column
             data-title=":: 'pci_databases_query_statistics_datagrid_stddev' | translate"
             data-property="stddevTime"
             data-type="number"
             data-sortable
-        ></oui-datagrid-column>
+        >
+            <span data-ng-bind="$value  | number : 2"></span>
+        </oui-datagrid-column>
         <oui-datagrid-column
             data-title=":: 'pci_databases_query_statistics_datagrid_total' | translate"
             data-property="totalTime"
             data-type="number"
             data-sortable
-        ></oui-datagrid-column>
+        >
+            <span data-ng-bind="$value  | number : 2"></span>
+        </oui-datagrid-column>
         <oui-datagrid-topbar>
             <oui-button
                 class="float-right"
