--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/current-queries/current-queries.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/current-queries/current-queries.html
@@ -99,6 +99,7 @@
             data-title="::'pci_databases_current_queries_datagrid_column_duration' | translate"
             property="queryDuration"
             type="number"
+            data-sortable
         >
             <span data-ng-bind="$value  | number : 2"></span>
         </oui-datagrid-column>
