--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/current-queries/current-queries.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/current-queries/current-queries.html
@@ -123,5 +123,14 @@
         >
             <span data-ng-bind="$value ? $value : '-'"></span>
         </oui-datagrid-column>
+        <oui-action-menu data-compact data-placement="end">
+            <oui-action-menu-item
+                data-on-click="$ctrl.trackAndTerminateQuery($row)"
+            >
+                <span
+                    data-translate="pci_databases_current_queries_datagrid_terminate_action_label"
+                ></span>
+            </oui-action-menu-item>
+        </oui-action-menu>
     </oui-datagrid>
 </div>
