--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/containers.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/containers.html
@@ -15,13 +15,13 @@
         </oui-datagrid-column>
         <oui-datagrid-column
             data-title="'pci_projects_project_storages_cold_archive_containers_creation_date_label' | translate"
-            data-property="creationDate"
-            data-type="string"
+            data-property="gridPropertyCreationDate"
+            data-type="date"
             data-searchable
             data-sortable
             data-filterable
         >
-            <span data-ng-bind="::$row.creationDate"></span>
+            <span data-ng-bind="$row.gridDisplayCreationDate"></span>
         </oui-datagrid-column>
         <oui-datagrid-column
             data-title=":: 'pci_projects_project_storages_containers_storedObjects_label' | translate"
