--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/users/add/add.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/users/add/add.html
@@ -82,6 +82,7 @@
                             <div
                                 class="oui-inline-adder__form"
                                 data-ng-repeat="extra in $ctrl.model.selectedRoles track by $index"
+                                data-ng-class="{'oui-inline-adder__form_added': $ctrl.model.selectedRoles[$index].added}"
                             >
                                 <fieldset class="oui-inline-adder__fieldset">
                                     <legend
@@ -134,7 +135,7 @@
                                     <oui-message
                                         data-type="error"
                                         data-ng-if="$ctrl.model.selectedRoles[$index].error"
-                                        class="px-md-3"
+                                        class="mx-3"
                                     >
                                         <span
                                             data-translate="pci_databases_user_add_error_existing"
@@ -182,6 +183,15 @@
                         data-translate-values="{nbRoles: $ctrl.configuredRoles}"
                     ></span>
                 </div>
+                <oui-message
+                    class="mt-3"
+                    data-type="warning"
+                    data-ng-if="$ctrl.model.selectedRoles.length === 1"
+                >
+                    <span
+                        data-translate="pci_databases_user_add_warning_roles_added"
+                    ></span>
+                </oui-message>
             </div>
         </div>
         <!-- basic roles-->
@@ -245,18 +255,18 @@
     </div>
     <div class="text-right">
         <oui-button
-            size="l"
-            disabled="$ctrl.processing"
-            ng-click="$ctrl.cancel()"
+            data-size="l"
+            data-disabled="$ctrl.processing"
+            data-on-click="$ctrl.cancel()"
         >
             <span data-translate="pci_databases_users_add_cancel"></span>
         </oui-button>
         <oui-button
-            size="l"
-            variant="primary"
-            icon-right="oui-icon-arrow-right"
-            disabled="$ctrl.processing || !$ctrl.model.username"
-            ng-click="$ctrl.addUser()"
+            data-size="l"
+            data-variant="primary"
+            data-icon-right="oui-icon-arrow-right"
+            data-disabled="$ctrl.processing || !$ctrl.model.username"
+            data-on-click="$ctrl.addUser()"
         >
             <span data-translate="pci_databases_users_add_create"></span>
         </oui-button>
