fix: add a11y for icons
datatr-157

Signed-off-by: Jonathan Perchoc <jonathan.perchoc@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/backups/fork/fork.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/backups/fork/fork.html
@@ -367,6 +367,7 @@
                             <div class="d-flex">
                                 <span
                                     class="oui-icon oui-icon-time mr-2"
+                                    aria-hidden="true"
                                 ></span>
                                 <span
                                     data-ng-bind="$ctrl.timestampSummary | date: 'medium'"
@@ -393,6 +394,7 @@
                             <div class="d-flex">
                                 <span
                                     class="oui-icon oui-icon-hashtag_concept mr-2"
+                                    aria-hidden="true"
                                 ></span>
                                 <span
                                     data-translate="pci_databases_backups_fork_spec_engine_version"
@@ -440,6 +442,7 @@
                             <div class="d-flex">
                                 <span
                                     class="oui-icon oui-icon-component_concept mr-2"
+                                    aria-hidden="true"
                                 ></span>
                                 <span
                                     data-translate="pci_databases_backups_fork_spec_flavor_CPU"
@@ -452,6 +455,7 @@
                             <div class="d-flex">
                                 <span
                                     class="oui-icon oui-icon-ram_concept mr-2"
+                                    aria-hidden="true"
                                 ></span>
                                 <span
                                     data-translate="pci_databases_backups_fork_spec_flavor_RAM"
@@ -478,6 +482,7 @@
                             <div class="d-flex">
                                 <span
                                     class="oui-icon oui-icon-cloud-edge-computing_concept mr-2"
+                                    aria-hidden="true"
                                 ></span>
                                 <span
                                     data-ng-if="$ctrl.model.plan.nodesCount === 1"
@@ -493,6 +498,7 @@
                             <div class="d-flex">
                                 <span
                                     class="oui-icon oui-icon-hardware-ssd_concept mr-2"
+                                    aria-hidden="true"
                                 ></span>
                                 <span
                                     data-ng-if="$ctrl.model.additionalDiskSize === 0"
@@ -530,6 +536,7 @@
                             <div class="d-flex flex-wrap">
                                 <span
                                     class="oui-icon oui-icon-cloud_concept mr-2"
+                                    aria-hidden="true"
                                 ></span>
                                 <span
                                     data-translate="pci_databases_backups_fork_spec_network_name"
@@ -548,6 +555,7 @@
                             <div class="d-flex">
                                 <span
                                     class="oui-icon oui-icon-cloud-edge-computing_concept mr-2"
+                                    aria-hidden="true"
                                 ></span>
                                 <span
                                     data-translate="pci_databases_backups_fork_spec_network_subnetwork"
