fix(storages): applied right pattern to name cloud-archive container
ref: DTRSD-108501

Signed-off-by: Mohammed ZAHAF <mohammed.zahaf.ext@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/containers/add/add.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/containers/add/add.html
@@ -264,7 +264,7 @@
                 type="text"
                 name="name"
                 data-ng-model="$ctrl.container.name"
-                data-ng-pattern="$ctrl.OBJECT_CONTAINER_NAME_PATTERN[$ctrl.container.offer]"
+                data-ng-pattern="$ctrl.STORAGES_CONTAINER_NAME_PATTERN"
                 data-ng-required="true"
             />
         </oui-field>
