fix(domain): show authCode when domain is expired ref: DTRSD-108558 Signed-off-by: Brendan SEILLER <brendan.seiller@corp.ovh.com>

--- a/packages/manager/apps/web/client/app/domain/general-informations/GENERAL_INFORMATIONS.html
+++ b/packages/manager/apps/web/client/app/domain/general-informations/GENERAL_INFORMATIONS.html
@@ -344,7 +344,7 @@
                             type="button"
                             data-translate="domain_dashboard_show_authinfo"
                             data-ng-click="setAction('authinfo/domain-authinfo', $ctrl.domain)"
-                            data-ng-if="!$ctrl.domain.isExpired && $ctrl.domain.protection === 'unlocked'"
+                            data-ng-if="$ctrl.domain.protection === 'unlocked'"
                             data-oui-tooltip="{{ ::'domain_dashboard_show_authinfo_title' | translate }}"
                         ></button>
                         <button
