fix(dedicated.pcc): add some tracking
red: MANAGER-9509

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/dedicatedCloud/onboarding/onboarding.html
+++ b/packages/manager/apps/dedicated/client/app/dedicatedCloud/onboarding/onboarding.html
@@ -1,6 +1,7 @@
 <manager-on-boarding-layout
     data-guides=":: $ctrl.guides"
     data-image-source=":: $ctrl.illustration"
+    data-on-guide-click="$ctrl.trackClick('docs::' + guide.id )"
 >
     <onboarding-title>
         <p data-translate="dedicated_clouds_onboarding_title"></p>
@@ -16,6 +17,7 @@
             href="{{:: $ctrl.cta }}"
             target="_blank"
             rel="noopener"
+            data-ng-click="$ctrl.trackClick('order')"
         >
         </a>
     </onboarding-description>
