--- a/packages/manager/apps/iam/src/iam.template.html
+++ b/packages/manager/apps/iam/src/iam.template.html
@@ -3,5 +3,8 @@
     <head>
         <title>IAM</title>
     </head>
-    <body class="container-fluid" data-ui-view></body>
+    <body class="container-fluid">
+        <ui-router-breadcrumb></ui-router-breadcrumb>
+        <div data-ui-view></div>
+    </body>
 </html>
