feat(storages): create backup from block storage
ref: MANAGER-10884

Signed-off-by: Mohammed ZAHAF <mohammed.zahaf.ext@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/blocks/blocks.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/blocks/blocks.html
@@ -156,10 +156,10 @@
                     ></span>
                 </oui-action-menu-item>
                 <oui-action-menu-item
-                    data-on-click="$ctrl.createSnapshot($row)"
+                    data-on-click="$ctrl.goToCreateVolumeBackup($row)"
                 >
                     <span
-                        data-translate="pci_projects_project_storages_blocks_snapshot_create_label"
+                        data-translate="pci_projects_project_storages_blocks_create_backup_label"
                     ></span>
                 </oui-action-menu-item>
                 <oui-action-menu-item data-on-click="$ctrl.deleteStorage($row)">
