--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/containers.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/containers.html
@@ -21,7 +21,7 @@
             data-sortable
             data-filterable
         >
-            <span data-ng-bind="$row.gridDisplayCreationDate"></span>
+            <span data-ng-bind="::$row.createdAt | date: 'short'"></span>
         </oui-datagrid-column>
         <oui-datagrid-column
             data-title=":: 'pci_projects_project_storages_containers_storedObjects_label' | translate"
