--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/users/users.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/users/users.html
@@ -41,7 +41,7 @@
         data-sortable
         data-filterable
     >
-        <span data-ng-bind="$row.gridDisplayCreationDate"></span>
+        <span data-ng-bind="::$row.creationDate | date: 'short'"></span>
     </oui-datagrid-column>
     <oui-datagrid-column
         data-title="'pci_projects_project_storages_containers_users_description' | translate"
