feat: allow edition for fixed strategy
datatr-201

Signed-off-by: Jonathan Perchoc <jonathan.perchoc@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/ai/apps/dashboard/general-information/general-information.html
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/dashboard/general-information/general-information.html
@@ -267,11 +267,11 @@
                                 class="d-flex justify-content-between align-items-center"
                             >
                                 <span
-                                    data-translate="pci_apps_general_information_scaling_static"
+                                    data-translate="pci_apps_general_information_scaling_auto"
                                 ></span>
                                 <button
                                     class="oui-button oui-button_ghost"
-                                    data-ng-click="$ctrl.staticScaling = !$ctrl.staticScaling"
+                                    data-ng-click="$ctrl.onUpdateScalingClick()"
                                 >
                                     <span
                                         class="oui-icon oui-icon-pen"
