--- a/packages/manager/modules/pci/src/projects/project/storages/volume-backup/list/restore-volume/template.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/volume-backup/list/restore-volume/template.html
@@ -11,6 +11,6 @@
 >
     <p
         data-translate="pci_projects_project_storages_volume_backup_list_restore_volume_description"
-        data-translate-values="{ volumeBackupName: '<strong>' + $ctrl.volumeBackup.name + '</strong>' }"
+        data-translate-values="{ volumeName: '<strong>' + $ctrl.volume.name + '</strong>', volumeBackupName: '<strong>' + $ctrl.volumeBackup.name + '</strong>' }"
     ></p>
 </oui-modal>
