--- a/packages/manager/apps/dedicated/client/app/dedicated/server/installation/ovh/dedicated-server-installation-ovh.html
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/installation/ovh/dedicated-server-installation-ovh.html
@@ -750,18 +750,18 @@
                                     }"
                                 >
                                     <span
-                                        data-ng-show="partition.typePartition != constants.warningLV || errorInst.typeLvSwap"
+                                        data-ng-show="(partition.typePartition != constants.warningLV && partition.fileSystem != constants.warningZFS) || errorInst.typeLvSwap"
                                     >
                                         -
                                     </span>
                                     <span
-                                        data-ng-hide="isSetPartition(partition) || partition.typePartition != constants.warningLV"
+                                        data-ng-hide="isSetPartition(partition) || (partition.typePartition != constants.warningLV && partition.fileSystem != constants.warningZFS)"
                                         data-ng-bind="partition.volumeName"
                                     >
                                     </span>
                                     <input
                                         type="text"
-                                        data-ng-show="isSetPartition(partition) && partition.typePartition == constants.warningLV && !errorInst.typeLvSwap"
+                                        data-ng-show="isSetPartition(partition) && (partition.typePartition == constants.warningLV || partition.fileSystem == constants.warningZFS) && !errorInst.typeLvSwap"
                                         data-ng-model="partition.volumeName"
                                         data-ng-required="partition.typePartition == constants.warningLV"
                                         data-ng-change="validationVolumeName(partition)"
@@ -1031,17 +1031,17 @@
                                     }"
                                 >
                                     <span
-                                        data-ng-show="newPartition.typePartition != constants.warningLV"
+                                        data-ng-show="newPartition.typePartition != constants.warningLV && newPartition.fileSystem != constants.warningZFS"
                                     >
                                         -
                                     </span>
                                     <input
                                         type="text"
                                         class="form-control"
-                                        data-ng-show="newPartition.typePartition == constants.warningLV"
+                                        data-ng-show="newPartition.typePartition == constants.warningLV || newPartition.fileSystem == constants.warningZFS"
                                         data-ng-model="newPartition.volumeName"
                                         data-ng-change="validationVolumeName(newPartition)"
-                                        data-ng-disabled="newPartition.typePartition != constants.warningLV"
+                                        data-ng-disabled="newPartition.typePartition != constants.warningLV && newPartition.fileSystem != constants.warningZFS"
                                     />
                                 </td>
                                 <td
@@ -1472,12 +1472,12 @@
                                     data-ng-if="!informations.softRaidOnlyMirroring"
                                 >
                                     <span
-                                        data-ng-if="partition.typePartition != constants.warningLV"
+                                        data-ng-if="partition.typePartition != constants.warningLV && partition.fileSystem != constants.warningZFS"
                                     >
                                         -
                                     </span>
                                     <span
-                                        data-ng-if="partition.typePartition == constants.warningLV"
+                                        data-ng-if="partition.typePartition == constants.warningLV || partition.fileSystem == constants.warningZFS"
                                         data-ng-bind="partition.volumeName"
                                     >
                                     </span>
