fix(dedicated): hide server_configuration_netboot_option_power netboot
MANAGER-10775

Signed-off-by: Jean-Baptiste Delon <jean-baptiste.delon@ovhcloud.com>

--- a/packages/manager/modules/bm-server-components/src/netboot/template.html
+++ b/packages/manager/modules/bm-server-components/src/netboot/template.html
@@ -25,6 +25,7 @@
                 <div
                     class="col-md-4"
                     data-ng-repeat="(key, data) in $ctrl.netboots track by $index"
+                    data-ng-if="key !== 'power'"
                 >
                     <oui-select-picker
                         name="{{:: key }}"
